[gd_scene load_steps=4 format=2]

[ext_resource path="res://status_effects/StatusEffectsTab.gd" type="Script" id=1]
[ext_resource path="res://ItemList.tscn" type="PackedScene" id=2]
[ext_resource path="res://status_effects/StatusEffectContainer.tscn" type="PackedScene" id=3]

[node name="StatusEffectTab" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 1274.0
margin_bottom = 716.0

[node name="StatusList" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_bottom = 712.0
table = 4
search_placeholder = "Search a status effect"
button_label = "Add a new status effect"
sort_items = false
show_field = "Name"

[node name="StatusEffectContainer" parent="HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 304.0
margin_right = 1268.0
margin_bottom = 712.0
[connection signal="item_selected" from="HBoxContainer/StatusList" to="." method="_on_StatusList_item_selected"]
